package com.clt.matlink.modules.purchase.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.purchase.domain.entity.Purchase;

public interface PurchaseMapper extends BaseMapperPlus<Purchase,Purchase> {
}

